--- a/app/src/main/res/drawable/corner_white.xml
+++ b/app/src/main/res/drawable/corner_white.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/listview_background_shape">
 
-    <solid android:color="@color/green" />
+    <solid android:color="#C5E7F6" />
 
     <corners android:radius="@dimen/_20sdp"
         />
