--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -137,6 +137,7 @@
                         android:text="My Library"
                         android:textColor="@color/primary_text"
                         android:textSize="@dimen/text_size_16"
+                        android:visibility="gone"
                         android:fontFamily="@font/poppins_regular"/>
                     <TextView
                         android:layout_width="match_parent"
@@ -149,6 +150,7 @@
                         android:text="My Timetable"
                         android:textColor="@color/primary_text"
                         android:textSize="@dimen/text_size_16"
+                        android:visibility="gone"
                         android:fontFamily="@font/poppins_regular"/>
 
 
