--- a/app/src/main/res/layout/activity_mock_test_prelims.xml
+++ b/app/src/main/res/layout/activity_mock_test_prelims.xml
@@ -12,4 +12,10 @@
         android:layout_below="@+id/tool_barLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_5sdp"
+        android:layout_below="@+id/tool_barLayout"
+        android:id="@+id/mocktest_recycleview"/>
 </RelativeLayout>
