--- a/app/src/main/res/layout/activity_packege_list.xml
+++ b/app/src/main/res/layout/activity_packege_list.xml
@@ -27,7 +27,7 @@
                 app:cardCornerRadius="@dimen/_15sdp"
                 android:elevation="@dimen/_8sdp"
                 android:layout_margin="@dimen/_8sdp"
-                >
+                android:visibility="gone">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
