--- a/app/src/main/res/layout/alert_popup.xml
+++ b/app/src/main/res/layout/alert_popup.xml
@@ -55,7 +55,7 @@
                 android:background="@drawable/background_button"
                 android:text="Support"
                 android:fontFamily="@font/poppins_regular"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white" />
             <Button
                 android:id="@+id/done_btn"
                 android:layout_width="0dp"
@@ -67,6 +67,16 @@
                 android:fontFamily="@font/poppins_regular"
                 android:textColor="@color/white"/>
         </LinearLayout>
+        <Button
+            android:id="@+id/done_payment_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_10sdp"
+            android:background="@drawable/background_button"
+            android:text="Done"
+            android:fontFamily="@font/poppins_regular"
+            android:textColor="@color/white"
+            android:visibility="gone"/>
     </LinearLayout>
 
 
