--- a/app/src/main/res/layout/activity_current__affairs__month.xml
+++ b/app/src/main/res/layout/activity_current__affairs__month.xml
@@ -40,5 +40,6 @@
         android:textSize="@dimen/text_size_20"
         android:layout_centerInParent="true"
         android:fontFamily="@font/poppins_regular"
-        android:id="@+id/no_data_found_tv"/>
+        android:id="@+id/no_data_found_tv"
+        android:visibility="gone"/>
 </RelativeLayout>
