--- a/app/src/main/res/layout/activity_complete__current__affair_list.xml
+++ b/app/src/main/res/layout/activity_complete__current__affair_list.xml
@@ -38,6 +38,7 @@
         android:text="@string/no_data_found"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_20"
+        android:visibility="gone"
         android:layout_centerInParent="true"
         android:fontFamily="@font/poppins_regular"
         android:id="@+id/no_data_found_tv"/>
